--- a/projeto01/style.css
+++ b/projeto01/style.css
@@ -52,7 +52,7 @@
 	}	
 	nav > a{
 		background-color: rgb(6,61,30,0.000);
-		padding: 10px;
+		padding: 10px 10px 0px 10px;
 		color: rgb(131,225,173);
 		font-weight: bold;
 		
