--- a/projeto01/style.css
+++ b/projeto01/style.css
@@ -46,9 +46,11 @@
 		padding: 15px;
 		font: 400 40px 'Bebas Neue', cursive;
 		text-align: center; 
+		text-indent: 10px;
 	}
 	header > p{
-		text-align: justify;
+		text-align: center;
+		padding: 0px 10px;
 	}
 	nav{
 		text-align: left;
@@ -146,8 +148,8 @@
 	aside > ul{
 		   list-style-type: '\2714\00A0\00A0'; 
 		   list-style-position: inside; 
-		   columns: 3; 
-		   
+		   columns: 2; 
+		   text-indent: 5px;
 	}
 	aside > h3{
 		font: 700 19px Arial, Verdana, Helvetica, sans-serif;
