--- a/projeto01/style.css
+++ b/projeto01/style.css
@@ -81,6 +81,7 @@
 		box-shadow: 0px 0px 8px 3px rgb(0,0,0,0.450);
 		border-radius: 0px 0px 10px 10px; 
 		line-height: 32px;
+		text-align: justify;
 	}
 	main img{
 		width: 100%;
