--- a/projeto01/style.css
+++ b/projeto01/style.css
@@ -50,7 +50,11 @@
 	}
 	header > p{
 		text-align: center;
-		padding: 0px 10px;
+		padding-right: 10px;
+		padding-left: 10px;
+		padding-bottom: 50px;
+		max-width: 600px;
+		margin: auto;
 	}
 	nav{
 		text-align: left;
