--- a/projeto02/style.css
+++ b/projeto02/style.css
@@ -19,17 +19,17 @@ header{
 	text-align: center;
 	margin: 0px;
 	padding: 25px;
-	min-width: 460px;
-	max-width: auto;
+	width: 100vw;
 	height: auto;
 }
 
 header > h1{
 	background-color: black;
 	color: white;
-	font: normal 7em var(--fonte-cabecalho);
+	font: normal var(--fonte-cabecalho);
 	margin: 30px 0px 5px 0px;
 	font-variant: small-caps;
+	font-size: 10vw;
 }
 
 header > p{
@@ -53,14 +53,14 @@ a:hover{
 
 section.normal{
 	background-color: white;
-	min-width: 460px;
-	max-width: auto;
+	width: 100vw;
 	line-height: 2em;
 	text-align: left;
 	padding-top: 10vh;
 	padding-bottom: 10vh;
 	padding-left: 30px;
 	font: normal 2em var(--fonte-conteudo);
+	
 }
 
 section.normal > p{
@@ -69,8 +69,7 @@ section.normal > p{
 
 section.imagem{
 	background-color: lightgray;
-	min-width: 460px;
-	max-width: auto;
+	width: 100vw;
 	line-height: 2em;
 	text-align: left;
 	padding-top: 10vh;
@@ -79,6 +78,7 @@ section.imagem{
 	font: normal 2em var(--fonte-conteudo);
 	box-shadow: inset 6px 6px 13px 0px rgb(0,0,0,0.410);
 	background-attachment: fixed;
+	
 }
 
 section.imagem > p{
@@ -102,7 +102,7 @@ section.imagem > p{
 }
 
 footer{
-	min-width: 460px;
+	width: 100vw;
 }
 
 footer > p{
