--- a/projeto02/style.css
+++ b/projeto02/style.css
@@ -59,6 +59,7 @@ section.normal{
 	padding-top: 10vh;
 	padding-bottom: 10vh;
 	padding-left: 30px;
+	padding-right: 20px;
 	font: normal 2em var(--fonte-conteudo);
 	
 }
@@ -75,6 +76,7 @@ section.imagem{
 	padding-top: 10vh;
 	padding-bottom: 10vh;
 	padding-left: 30px;
+	padding-right: 20px;
 	font: normal 2em var(--fonte-conteudo);
 	box-shadow: inset 6px 6px 13px 0px rgb(0,0,0,0.410);
 	background-attachment: fixed;
@@ -110,7 +112,8 @@ footer > p{
 	background-color: black;
 	color: white;
 	text-align: center;
-	padding: 10px;
+	padding: 10px 30px;
+	margin: 0px -50px 0px 0px;
 }
 
 strong{
