--- a/projeto01/style.css
+++ b/projeto01/style.css
@@ -32,7 +32,7 @@
 		content: '\00A0\1F517';
 	}
 	header{
-		height: 250px;
+		height: auto;
 		background-image: linear-gradient(to top, #063d1e, #1a5c37, #2fa866);
 		color: white;
 		padding-top: 40px;
@@ -58,7 +58,8 @@
 	}
 	nav{
 		text-align: left;
-		padding: 10px;
+		text-indent: 5px;
+		
 	}	
 	nav > a{
 		background-color: rgb(6,61,30,0.000);
@@ -104,9 +105,9 @@
 		font: 400 29px droid, cursive;
 		color: rgb(6, 61, 30);
 		text-indent: 10px;
-	}
-	main > h1{
 		text-align: center;
+		display: block;
+		padding: 30px 0px 0px;
 	}
 	h2{
 		font: 400 21px droid, cursive;
