--- a/projeto-tela-login/estilos/style.css
+++ b/projeto-tela-login/estilos/style.css
@@ -131,7 +131,7 @@ form > a{
 }
 
 form > a:hover{
-	background-color: #0CC2B6;
+	background-color: #DB4F00;
 	color: white;
 	cursor: pointer;
 }
@@ -145,4 +145,12 @@ footer > p{
 	font-size: 77%;
 	color: white;
 	text-align: center;
+}
+footer > p > a{
+	text-decoration: none;
+	color: white;
+}
+footer > p > a:hover{
+	text-decoration: underline;
+	color: black;
 }
